--- a/frontend/admin-login.html
+++ b/frontend/admin-login.html
@@ -49,6 +49,11 @@
       alert(result.message);
 
       if (response.ok) {
+        const { token } = result;
+        if (token) {
+          localStorage.setItem('adminToken', token);
+          localStorage.setItem('isAdminLoggedIn', 'true');
+        }
         window.location.href = "admin-dashboard.html";
       }
     });
